# ESP32S3_LVGL_FreeKWatch

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/Page/: CMakeLists.txt  PageManager.cpp  PageManager.h
components/Resources/: CMakeLists.txt  background.c  bgimage.c  img_cogwheel_argb.c  lianjie.c  tuku.c  wifipic.c
components/comm/: CMakeLists.txt  LinkConfig.cpp  LinkConfig.h  LinkInterface.cpp  LinkInterface.h  LinkManager.cpp  LinkManager.h  SerialLink.cpp  SerialLink.h
components/event/: CMakeLists.txt  Event.cpp  Event.h  EventApi.cpp  EventApi.h  esp_event_api.cpp  esp_event_api.h  esp_event_cxx.cpp  esp_event_cxx.h
components/lv_fs_if/: CMakeLists.txt  lv_fs_fatfs.c  lv_fs_if.c  lv_fs_if.h
components/lvgl_cpp/: LVGLBase.cpp  LVGLBase.h  LVGLPage.cpp  LVGLStyle.cpp  LVGLStyle.hpp  style_data_types.h
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.h
components/lvgl_porting/: CMakeLists.txt  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
components/page/: CMakeLists.txt  CommonControl.c  CommonControl.h  MainPage.c  MainPage.h  MainPageControl.c  MainPageControl.h  MessageDialog.h  MusicPage.c  MusicPage.h  PageManager.c  PageManager.h  WifiPage.c  WifiPage.h
components/res/: BGIMG.c  CMakeLists.txt  aiImg.c  backIcon.c  dianhua.c  dianliang.c  gaode.c  linggan.c  play.c  qianbao.c  shangyishou.c  shipin.c  suijisenlin.c  weixin.c  wenjian.c  wifiStateOff.c  wifiicon.c  wifistateOn.c  xiayishou.c  (+4 more)
main/: AppConfig.h  Application.cpp  Application.h  CMakeLists.txt  FreeKMain.cpp  HalConfig.h  main.c  main.cpp
(+13 files in other folders)
